--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "qrcode-reader": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^2.1.3",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-scripts": "^5.0.1",
     "web3": "^4.0.1"
   },
   "browserslist": {
@@ -31,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
