--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,22 @@
 version: "3.8"
 services:
   nft-receiver-app:
-    container_name: nft-receiver-app
-    build: .
+    container_name: nft-receiver-backend
+    build: ./backend
     ports:
-      - "3000:3000"
+      - "3000:3001"
     volumes:
-      - .:/usr/src/app
+      - ./backend:/usr/src/app
       - /usr/src/app/node_modules
     environment:
       - NODE_ENV=development
     command: ["npm", "start"]
+
+  nft-receiver-frontend:
+    container_name: nft-receiver-frontend
+    image: nginx:alpine
+    ports:
+      - "8080:80" #80:80
+    volumes:
+      - ./frontend:/usr/share/nginx/html # assuming your frontend code is in frontend directory  
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf # Mount custom nginx config
