--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,5 @@ services:
     ports:
       - "8080:80" #80:80
     volumes:
-      - ./frontend:/usr/share/nginx/html # assuming your frontend code is in frontend directory  
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf # Mount custom nginx config
+      - ./frontend/build:/usr/share/nginx/html # assuming your frontend code is in frontend directory  
+      - /home/saboten/dev/nft-receiver-app/nginx.conf:/etc/nginx/conf.d/default.conf # Mount custom nginx config
